--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,5 +6,8 @@
         <li class="nav-item">
             <a class="nav-link" [routerLink]="['/bitcoin']">Bitcoin</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/market']">Market</a>
+        </li>
     </ul>
 </nav>
