--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -9,5 +9,8 @@
         <li class="nav-item">
             <a class="nav-link" [routerLink]="['/market']">Market</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" (click)="bitcoin.update()">{{bitcoin.t}}</a>
+        </li>
     </ul>
 </nav>
