Market service + Mock page

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,1 +1,11 @@
-<p>index works!</p>
+<h1>Home</h1>
+<div>
+    <p>Project developed by:</p>
+    <a href="https://github.com/arthurhmk" target="_blank">
+        <img src="https://avatars1.githubusercontent.com/u/48594874?s=460&v=4">
+        <p>Arthur</p>
+    </a>
+</div>
+<div>
+    <p>Source code can be found at: <a href="https://github.com/arthurhmk/projeto-si02">https://github.com/arthurhmk/projeto-si02</a></p>
+</div>
