--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <ul class="navbar-nav">
+    <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
             <a class="nav-link" [routerLink]="['/']">Index</a>
         </li>
@@ -8,6 +8,12 @@
         </li>
         <li class="nav-item">
             <a class="nav-link" [routerLink]="['/market']">Market</a>
+        </li>
+        
+    </ul>
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <span class="nav-link">Auto Updater:</span>
         </li>
         <li class="nav-item">
             <a class="nav-link" (click)="bitcoin.update()">{{bitcoin.t}}</a>
