--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<div class="container">
+    <div class="m-5 p-3 card">
+        <router-outlet></router-outlet>
+    </div>
+</div>
