--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,9 +1,11 @@
-<h1>Home</h1>
-<div>
-    <p>Project developed by:</p>
-    <a href="https://github.com/arthurhmk" target="_blank">
-        <img src="https://avatars1.githubusercontent.com/u/48594874?s=460&v=4">
-        <p>Arthur</p>
+<div class="container pb-5">
+    <h1 class="text-center">Angular - Projeto02</h1>
+</div>
+<div class="container pb-5">
+    <p class="mb-1">Project developed by:</p>
+    <a href="https://github.com/arthurhmk" target="_blank" class="row py-2 border rounded align-items-center">
+        <img src="https://avatars1.githubusercontent.com/u/48594874?s=460&v=4" height="45px" class="col-auto">
+        <p class="col m-0">Arthur</p>
     </a>
 </div>
 <div>
