--- a/src/app/market/market.component.html
+++ b/src/app/market/market.component.html
@@ -1,34 +1,67 @@
-<h1>Marketplace</h1>
-<p>{{bitcoin.coins[0].bpi.BRL.rate_float | currency:'BRL'}}</p>
-<h2>Your Wallet</h2>
-<p>{{market.cashmoney | currency:'BRL'}}</p>
-<p>{{market.bitmoney | number:'1.8-8'}}</p>
+<div class="row pb-4 mx-4">
+    <h1 class="text-center col-12">Marketplace</h1>
+</div>
+<div class="row pb-5 mx-4 justify-content-center">
+    <div class="row col-auto font-weight-bold border rounded p-0" style="font-size:1.4rem">
+        <span class="col-auto bg-primary text-white py-2">Bitcoin Value: </span>
+        <span class="col-auto py-2">{{bitcoin.coins[0].bpi.BRL.rate_float | currency:'BRL'}}</span>
+    </div>
+</div>
+<div class="row pb-4 mx-4 justify-content-center text-center">
+    <h2 class="col-12">Wallet</h2>
+    <div class="row col-auto font-weight-bold border rounded p-0" style="font-size:1.4rem">
+        <table class="table m-0" style="font-size:1.4rem">
+            <tr>
+                <td class="bg-primary text-white text-right">{{bitcoin.coins[0].bpi.BRL.description}}:</td>
+                <td class="text-left">{{market.cashmoney | currency:'BRL'}}</td>
+            </tr>
+            <tr>
+                <td class="bg-primary text-white text-right">Bitcoin:</td>
+                <td class="text-left">{{market.bitmoney | number:'1.8-8'}}</td>
+            </tr>
+        </table>
+    </div>
+</div>
 
-<h2>Buy Bitcoin</h2>
-<input type="text" [(ngModel)]="buy" (input)="validatekey($event,true)">
-<input type="submit" value="Buy" (click)="trade(true)">
-<p>{{buyprev | currency:'BRL'}}</p>
+<div class="row pb-4 mx-4 justify-content-center text-center">
+    <div class="col-auto m-3 p-2 border rounded">
+        <h2>Buy Bitcoin</h2>
+        <div class="mb-2 border border-dark">
+            <input style="border:none" type="text" [(ngModel)]="buy" (input)="validatekey($event,true)">
+            <input style="border:none" class="m-0 p-2 bg-dark text-white" type="submit" value="Buy" (click)="trade(true)">
+        </div>
+        <span class="font-weight-bold">{{buyprev | currency:'BRL'}}</span>
+    </div>
 
-<h2>Sell Bitcoin</h2>
-<input type="text" [(ngModel)]="sell" (input)="validatekey($event,false)">
-<input type="submit" value="Sell" (click)="trade(false)">
-<p>{{sellprev | currency:'BRL'}}</p>
+    <div class="col-auto m-3 p-2 border rounded">
+        <h2>Sell Bitcoin</h2>
+        <div class="mb-2 border border-dark">
+            <input style="border:none" type="text" [(ngModel)]="sell" (input)="validatekey($event,false)">
+            <input style="border:none" class="m-0 p-2 bg-dark text-white" type="submit" value="Sell" (click)="trade(false)">
+        </div>
+        <span class="font-weight-bold">{{sellprev | currency:'BRL'}}</span>
+    </div>
+</div>
 
-<table>
-    <tr>
-        <td>Timestamp</td>
-        <td>Previous Money</td>
-        <td>Current Money</td>
-        <td>Previous Bitcoin</td>
-        <td>Current Bitcoin</td>
-        <td>Bitcoin Price</td>
-    </tr>
-    <tr *ngFor="let trade of market.trades">
-        <td>{{trade.time}}</td>
-        <td>{{trade.oldcash | currency:'BRL'}}</td>
-        <td>{{trade.newcash | currency:'BRL'}}</td>
-        <td>{{trade.oldbit | number:'1.8-8'}}</td>
-        <td>{{trade.newbit | number:'1.8-8'}}</td>
-        <td>{{trade.bitcoinprice | currency:'BRL'}}</td>
-    </tr>
+<table class="border table table-striped text-center">
+    <thead>
+        <tr class="bg-primary text-white">
+            <td>Timestamp</td>
+            <td>Previous Balance</td>
+            <td>Current Balance</td>
+            <td>Previous Bitcoin</td>
+            <td>Current Bitcoin</td>
+            <td>Bitcoin Value</td>
+        </tr>
+    </thead>
+    <tbody>
+        <tr *ngFor="let trade of market.trades">
+            <td>{{trade.time | date:'dd/MM HH:mm:ss'}}</td>
+            <td>{{trade.oldcash | currency:'BRL'}}</td>
+            <td>{{trade.newcash | currency:'BRL'}}</td>
+            <td>{{trade.oldbit | number:'1.8-8'}}</td>
+            <td>{{trade.newbit | number:'1.8-8'}}</td>
+            <td>{{trade.bitcoinprice | currency:'BRL'}}</td>
+        </tr>
+    </tbody>
 </table>
