--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,12 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
+        <li class="nav-item" [ngClass]="{'active': this.router.url=='/'}">
             <a class="nav-link" [routerLink]="['/']">Index</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" [ngClass]="{'active': this.router.url=='/bitcoin'}">
             <a class="nav-link" [routerLink]="['/bitcoin']">Bitcoin</a>
         </li>
-        <li class="nav-item">
+        <li class="nav-item" [ngClass]="{'active': this.router.url=='/market'}">
             <a class="nav-link" [routerLink]="['/market']">Market</a>
         </li>
         
